--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^51.0.0",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^9.23.0",
     "react": "18.2.0",
-    "react-native": "0.71.13",
+    "react-native": "0.74.5",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
